# python-docspec

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  monorepo.yaml  monorepo.yml  package.yaml  pydoc-markdown.yml  readme.md  search.html  setup.py  sitemap.xml  slam.toml  slap.toml  spec.md
.changelog/: 1.0.0.yml  1.0.1.yml  1.0.2.yml  1.3.0.toml  _unreleased.toml  _unreleased.yml
.ci/: slam-cli.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-test.yml  python.yml
api-documentation/docspec/: index.html
api-documentation/docspec_python/: index.html
api/docspec/: index.html
api/docspec-python/: index.html
changelog/: index.html
changelog/docspec/: index.html
changelog/docspec-python/: index.html
docs/: build.novella  requirements.txt
docs/content/: index.md  specification.md
docs/content/api/: docspec-python.md  docspec.md
docs/content/changelog/: docspec-python.md  docspec.md
docs/scripts/: render-spec
docspec/: CHANGELOG.md  MANIFEST.in  README.md  package.yaml  package.yml  pyproject.toml  readme.md  setup.py  specification.yml
docspec-docs/: README.md
docspec-python/: CHANGELOG.md  MANIFEST.in  README.md  package.yaml  package.yml  pyproject.toml  setup.py
docspec-python/.changelog/: 0.0.5.toml  0.0.5.yml  0.0.6.toml  0.0.6.yml  0.0.7.toml  0.0.7.yml  0.1.0.toml  0.1.0.yml  0.1.1.toml  0.1.1.yml  0.2.0.toml  0.2.0.yml  1.0.0.toml  1.0.0.yml  1.1.0.toml  1.1.0.yml  1.1.1.toml  1.1.1.yml  1.2.0.toml  1.2.0.yml  1.3.0.toml  2.0.0a1.toml  2.0.1.toml  2.0.2.toml  2.1.0.toml  2.1.1.toml  _unreleased.toml  _unreleased.yml
docspec-python/src/docspec_python/: __init__.py  __main__.py  parser.py  parser2.py
docspec-python/src/docspec_python/test/: test_loader.py  test_parser.py
docspec-python/src/test/: test_parser.py
docspec-python/test/: test_loader.py  test_parser.py  test_parser2.py
docspec/.changelog/: 0.2.0.toml  0.2.0.yml  0.2.1.toml  0.2.1.yml  1.0.0.toml  1.0.0.yml  1.0.1.toml  1.0.2.toml  1.1.0.toml  1.1.0.yml  1.2.0.toml  1.2.0.yml  2.0.0a1.toml  2.1.2.toml  2.2.0.toml  2.2.1.toml  _unreleased.toml  _unreleased.yml
docspec/src/: specification.yml
docspec/src/docspec/: __init__.py  __main__.py  genericvisitor.py
docspec/src/test/: test_reverse_map.py
docspec/src/test/docspec/: fixtures.py  test_deserialize.py  test_reverse_map.py  test_visitors.py
docspec/test/: conftest.py
docspec/test/docspec/: fixtures.py  test_deserialize.py
search/: search_index.json
specification/: index.html
