
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docspec-python"
version = "2.2.1"
description = "A parser based on lib2to3 producing docspec data from Python source code."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/NiklasRosenstein/docspec/"
packages = [{ include = "docspec_python", from="src" }]

[tool.poetry.dependencies]
python = "^3.7"
docspec = "^2.2.1"
"nr.util" = ">=0.7.0"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-Deprecated = "*"

[tool.poetry.scripts]
docspec-python = "docspec_python.__main__:main"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
pytest = "pytest -vv"
mypy = "mypy src/ test --check-untyped-defs"
black = "black --check src/ test/"
isort = "isort --check-only src/ test/"
flake8 = "flake8 src/ test/"

[tool.slap.run]
fmt = "black src/ test/ && isort src/ test/"

[tool.mypy]
python_version = "3.6"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "blib2to3.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
